@@ -88,7 +88,7 @@ if test "$build_gstreamer" != "no"; then
         GST_MAJORMINOR=0.8
         GST_REQ=0.8.1
 
-	PKG_CHECK_MODULES(GST, gstreamer-$GST_MAJORMINOR >= $GST_REQ,
+        PKG_CHECK_MODULES(GST, gstreamer-$GST_MAJORMINOR >= $GST_REQ,
             have_gst=yes,have_gst=no)
 
         PKG_CHECK_MODULES(GST_PLUGINS, gstreamer-plugins-$GST_MAJORMINOR >= $GST_REQ, \
@@ -318,7 +318,7 @@ AC_ARG_WITH(included-sqlite,
 
 if test x$included_sqlite = xno; then
     if test x$PKGCONFIGFOUND = xyes; then
-		  PKG_CHECK_MODULES(SQLITE, sqlite3 >= 3.0,	have_sqlite=yes,have_sqlite=no)
+        PKG_CHECK_MODULES(SQLITE, sqlite3 >= 3.0,	have_sqlite=yes,have_sqlite=no)
 
         if test x$have_sqlite = xyes; then
             ## AC_DEFINE(HAVE_SQLITE, 1, [have SQLite database library])
@@ -511,6 +511,20 @@ fi
 
 ###############################################################################
 # END AMAZON CHECK
+###############################################################################
+
+
+
+###############################################################################
+# BEGIN KDEBASE CHECK
+###############################################################################
+
+KDE_CHECK_HEADER(konqsidebarplugin.h, have_konqsidebar=yes, have_konqsidebar=no)
+
+AM_CONDITIONAL(with_konqsidebar, [test x$have_konqsidebar = xyes])
+
+###############################################################################
+# END KDEBASE CHECK
 ###############################################################################
 
 
