@@ -4,6 +4,8 @@ amaroK ChangeLog
 
 
 VERSION 1.2-beta3:
+  FIX: Configure check was missing for the Konqsidebar
+       (depends on KDEBASE).
   FIX: Browser splitter was drawn incorrectly with some styles. (BR 95333)
   ADD: DCOP call for relative seek. Patch by Andreas Pfaller. (BR 84989)
   CHG: Bumped TagLib dependency to 1.3.1. (1.3 is too damn buggy)
